--- a/client/quizApp.css
+++ b/client/quizApp.css
@@ -42,11 +42,17 @@ body {
   margin-top: 20px;
 }
 
+.answersWrapper {
+  display: grid;
+}
+
 .link {
 }
 
 .btn {
   cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 10px 25px;
   border-radius: 10px;
   outline: none;
